--- a/views/product.ejs
+++ b/views/product.ejs
@@ -114,13 +114,13 @@
                       <div class="cons">
                         <h5 class="vg-h5"><strong>蔬菜</strong></h5>
                         <% for(let f = 0 ;f < data.veg.length ;f++ ){ %>
-                        <button class="btn f_1" data-pay="100">
+                        <button class="btn f_1 f_2" data-pay="100">
                           <%= data.veg[f].product %>
                         </button>
                         <% } %>
                         <h5 class="vg-h5 hoh5"><strong>水果</strong></h5>
                         <% for(let f = 0 ;f < data.fruit.length ;f++ ){ %>
-                        <button class="btn f_1" data-pay="50">
+                        <button class="btn f_1 f_2" data-pay="50">
                           <%= data.fruit[f].product %>
                         </button>
                         <% } %>
