--- a/lib/css/home.css
+++ b/lib/css/home.css
@@ -27,8 +27,8 @@
 /* 首頁影片區塊 */
 #sec1 {
     margin-top: -200px;
-    width: 100vw;
-    height: 80%;
+    width: 100%;
+    /* height: 80%; */
     position: relative;
     transition: all 1s;
 }
@@ -81,6 +81,7 @@ h2 {
     z-index: 2;
     height: 650px;
     transition: all 1s;
+    width: 100%;
 }
 
 #step1,
@@ -550,6 +551,7 @@ h2 {
 @media screen and (max-width: 700px) {
     #sec3 {
         height: 900px;
+        width: 100%;
     }
 
     #step1,
