--- a/views/activityboard.ejs
+++ b/views/activityboard.ejs
@@ -374,7 +374,7 @@
                                 timer: 1500
                             }).then(
                                 setTimeout(() => {
-                                    document.location.href = "/login/userlogin"
+                                    $("#checkUser").modal("show");
                                 }, 2000))
                         } else {
 
