--- a/views/activityboard_inside.ejs
+++ b/views/activityboard_inside.ejs
@@ -320,7 +320,7 @@
                                 timer: 1500
                             }).then(
                                 setTimeout(() => {
-                                    document.location.href = "/login/userlogin"
+                                    $("#checkUser").modal("show");
                                 }, 2000))
                         } else {
 
