--- a/views/share/head_link.ejs
+++ b/views/share/head_link.ejs
@@ -1,6 +1,8 @@
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<script type="text/javascript"
+ src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <link
   rel="stylesheet"
   href="http://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"
