0917 芳需要求救token id串上去的部分QQ

--- a/views/m_basicInfo.ejs
+++ b/views/m_basicInfo.ejs
@@ -90,6 +90,16 @@
 
 <%- include('share/footer.ejs') %>
 
+<script>
+// 設定使用者
+var userData = localStorage.getItem('token');
+var userToken = userData ? JSON.parse(userData) : false;
+// 設定目前使用者id
+var uid = userToken.id;
+
+// $get(`/basicInfo/${uid}`)
+</script>
+
 </body>
 
 </html>
