--- a/views/share/header.ejs
+++ b/views/share/header.ejs
@@ -57,7 +57,7 @@
   <main>
     <a href="#" class="close-button"><i class="fa-solid fa-xmark"></i></a>
     <h2>購物車<span class="count">0</span></h2>
-    <ul class="products"></ul>
+    <ul class="products" id="productss"></ul>
     <div class="totals">
       <div class="subtotal">
         <span class="label">Total:</span>
@@ -73,7 +73,9 @@
 </aside>
 <div id="sidebar-cart-curtain"></div>
 <div class="vg-nav" id="vg-navbar">
-  <a href="/" class="vg-nav-logo"><img src="img/vegeLogo.png" alt="vegeLogo"></a>
+  <a href="/" class="vg-nav-logo"
+    ><img src="img/vegeLogo.png" alt="vegeLogo"
+  /></a>
   <a href="/about" class="btn-vg-2">關於我們</a>
   <a href="/activityboard" class="btn-vg-2">最新消息</a>
   <a href="/product" class="btn-vg-2">產品資訊</a>
