0918 忽 更新訂單完成後超連結路徑

--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -34,8 +34,8 @@
                 <p class="vg-p">訂單編號：<a href="/rateorder" id="orderNumber" class="vg-href"> MP23301004</a></p>
                 <p class="vg-p">系統已將訂單寄送至信箱：<span id="memberMail" class="vg-p"> tom22013@gmail.com</span></p>
                 <div class="m-3 p-3 text-center" id="orderplacedbtn">
-                    <a href="/orderconfirm" class="btn btn-vg-lg mx-2">會員中心</a>
-                    <a href="/" class="btn btn-vg-lg mx-2">繼續購物</a>
+                    <a href="/member" class="btn btn-vg-lg mx-2">會員中心</a>
+                    <a href="/product" class="btn btn-vg-lg mx-2">繼續購物</a>
                 </div>
             </div>
         </main>
