--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -88,7 +88,10 @@
                                                     </div>
                                                 </div>
                                             </a>
-                                            <p class="likePeople" style="margin-left: -12px; padding: 3px;"></p>
+                                            <p class="likePeople" style="margin-left: -12px; padding: 3px;"
+                                                id="likePeople<%= data[i].atcid %>">
+                                                <%= data[i].actlike %>
+                                            </p>
                                             <a>
                                                 <div class="con-like con-keep">
                                                     <input title="like" type="checkbox" class="like keep1"
@@ -322,48 +325,128 @@
                         // }
                     });
                     //愛心設定非會員需登入，會員加入資料庫且顯示實心icon
+                    // $('.check1').on('click', function (e) {
+                    //     let text = $(this).parent().parent().parent().find('p');
+                    //    let textPlus = $(this).parent().parent().parent().find('p').text();
+                    //     var userData = localStorage.getItem("token");
+                    //     var userToken = userData ? JSON.parse(userData) : false;
+                    //     var pn = e.target.id.substring(7);
+                    //     if (userToken == false) {
+                    //         Swal.fire({
+                    //             title: '請先登入會員',
+                    //             icon: 'warning',
+                    //             showConfirmButton: false,
+                    //             timer: 1500
+                    //         });
+                    //         $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'none');
+                    //     } else {
+                    //         var keepData = {};
+                    //         keepData.atcid = pn;
+                    //         keepData.uid = userToken.id;
+                    //         var jsonData = JSON.stringify(keepData);
+                    //         fetch('/blog/likearticle', {
+                    //             method: "POST",
+                    //             headers: {
+                    //                 "Content-type": "application/json;charset=UTF-8"
+                    //             },
+                    //             body: jsonData
+                    //         })
+                    //             .then(function (res) {
+                    //                 Swal.fire({
+                    //                     position: 'center',
+                    //                     icon: 'success',
+                    //                     title: '已按讚',
+                    //                     showConfirmButton: false,
+                    //                     timer: 1500
+                    //                 });
+                    //                 $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'block');
+                    //                 textPlus++;
+                    //                 text.text(textPlus);
+                    //             })
+
+                    //     }
+                    //     // }
+                    // });
+
                     $('.check1').on('click', function (e) {
-                        let text = $(this).parent().parent().parent().find('p');
-                       let textPlus = $(this).parent().parent().parent().find('p').text();
+                        // console.log($(this).next().children('svg:nth-child(2)').css('display') !== 'block');
                         var userData = localStorage.getItem("token");
                         var userToken = userData ? JSON.parse(userData) : false;
-                        var pn = e.target.id.substring(7);
-                        if (userToken == false) {
+
+                        if (userToken) {
+                            
+
+                            if ($(this).next().children('svg:nth-child(2)').css('display') !== 'block') {
+                                let text = $(this).parent().parent().parent().find('p');
+                                let textPlus = $(this).parent().parent().parent().find('p').text();
+                                var pn = e.target.id.substring(7);
+                                var keepData = {};
+                                keepData.atcid = pn;
+                                keepData.uid = userToken.id;
+                                keepData.like = parseInt(textPlus) + 1;
+                                console.log(keepData);
+                                var jsonData = JSON.stringify(keepData);
+                                fetch('/blog/likearticle', {
+                                    method: "POST",
+                                    headers: {
+                                        "Content-type": "application/json;charset=UTF-8"
+                                    },
+                                    body: jsonData
+                                })
+                                    .then(function (res) {
+                                        Swal.fire({
+                                            position: 'center',
+                                            icon: 'success',
+                                            title: '已按讚',
+                                            showConfirmButton: false,
+                                            timer: 1500
+                                        });
+                                        $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'block');
+
+                                        textPlus++;
+                                        text.text(textPlus);
+                                    })
+
+                            } else {
+                                let text = $(this).parent().parent().parent().find('p');
+                                let textPlus = $(this).parent().parent().parent().find('p').text();
+                                var userData = localStorage.getItem("token");
+                                var userToken = userData ? JSON.parse(userData) : false;
+                                console.log(textPlus);
+                                var keepData = {};
+                                var pn = e.target.id.substring(7);
+                                keepData.atcid = pn;
+                                keepData.uid = userToken.id;
+                                keepData.like = parseInt(textPlus) - 1;
+                                console.log(keepData);
+                                var jsonData = JSON.stringify(keepData);
+                                fetch('/blog/likearticle', {
+                                    method: "POST",
+                                    headers: {
+                                        "Content-type": "application/json;charset=UTF-8"
+                                    },
+                                    body: jsonData
+                                })
+                                    .then(function (res) {
+
+                                        $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'none');
+
+                                        textPlus--;
+                                        text.text(textPlus);
+                                    })
+                            }
+                        } else {
+
                             Swal.fire({
                                 title: '請先登入會員',
                                 icon: 'warning',
                                 showConfirmButton: false,
                                 timer: 1500
-                            });
-                            $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'none');
-                        } else {
-                            var keepData = {};
-                            keepData.atcid = pn;
-                            keepData.uid = userToken.id;
-                            var jsonData = JSON.stringify(keepData);
-                            fetch('/blog/likearticle', {
-                                method: "POST",
-                                headers: {
-                                    "Content-type": "application/json;charset=UTF-8"
-                                },
-                                body: jsonData
                             })
-                                .then(function (res) {
-                                    Swal.fire({
-                                        position: 'center',
-                                        icon: 'success',
-                                        title: '已按讚',
-                                        showConfirmButton: false,
-                                        timer: 1500
-                                    });
-                                    $(`#likeIcon${pn} svg:nth-child(2)`).css('display', 'block');
-                                    textPlus++;
-                                    text.text(textPlus);
-                                })
-
                         }
-                        // }
                     });
+
+
 
 
                     //設定目前頁面下方畫線
