--- a/views/share/modal.ejs
+++ b/views/share/modal.ejs
@@ -600,6 +600,7 @@
     return (data.hot = "");
   };
   dxQ6_hot.onclick = function () {
+    $(".buyfv").empty();
     return (data.hot = "hot");
   };
 
